# ffmpeg-kit-extended

./: CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support.yml
flutter/: CHANGELOG.md  README.md  pubspec.yaml
flutter/doc/: index.md  quick-start.md
flutter/doc/api/: config.md  ffmpeg-kit.md  ffplay-kit.md  ffprobe-kit.md
flutter/doc/guides/: callbacks.md  media-information.md  playback-control.md  session-queue-management.md  video-processing.md
flutter/docs/: index.md  installation.md
flutter/docs/api/: data-models.md  ffmpeg-kit.md  ffprobe-kit.md  sessions.md
flutter/docs/examples/: common-use-cases.md  complete-apps.md
flutter/docs/guides/: advanced.md  audio-processing.md  error-handling.md  playback-control.md
flutter/example/: .gitignore  pubspec.yaml
flutter/example/android/app/: build.gradle.kts
flutter/example/lib/: main.dart
flutter/windows/: CMakeLists.txt
